fixed button spacing issue

--- a/assets/stylesheets/default.css
+++ b/assets/stylesheets/default.css
@@ -86,7 +86,7 @@ a:hover {
   background-color: #22ba2e;
   border: .05rem solid #22ba2e;
   color: #111111;
-  margin: 2rem;
+  margin: 1rem;
 }
 
 .btn-secondary:active {
